# footguard

./: .gitignore  README.md
backend/: RISK_RULES.md  __init__.py  requirements.txt
backend/app/: config.py  (+4 more)
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_main.c  footguard_adc.c  footguard_adc.h  footguard_ble.c  footguard_ble.h  footguard_command.c  footguard_command.h  footguard_command_executor.c  footguard_command_executor.h  footguard_command_service.c  footguard_command_service.h  footguard_config.h  footguard_crc16.c  footguard_crc16.h  footguard_fsr.c  footguard_fsr.h  footguard_gatt.c  footguard_gatt.h  footguard_mock_sensor.c  footguard_mock_sensor.h  footguard_motor.c  footguard_motor.h  footguard_mpu6050.c  footguard_mpu6050.h  footguard_ntc.c  footguard_ntc.h  footguard_protocol.c  footguard_protocol.h  footguard_protocol_selftest.c  footguard_protocol_selftest.h  footguard_real_sensor.c  footguard_real_sensor.h  footguard_time.c  footguard_time.h
mobile_app/: README.md  pubspec.yaml
protocol/: README.md  REVISION_NOTES_v1_1.md  REVISION_NOTES_v1_2.md  REVISION_NOTES_v1_3.md  ack_schema_v1.json  api_contract_v1.md  ble_protocol_v1.md  command_schema_v1.json  device_status_schema_v1.json  enums_v1.md  field_dictionary.md
sample_data/: intervention_recovery.csv  left_forefoot_high.csv  left_load_bias.csv  normal_stand.csv  normal_walk.csv  right_disconnect.csv  right_load_bias.csv
test_reports/: firmware_ble_left_board_2026-07-20.md
tools/: __init__.py  generate_mock_data.py  validate_protocol.py
(+100 files in other folders)
